<resources>
    <string name="app_name">AndroidDialogDemo</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="send_again">重新发送</string>
    <string name="after_seconds">秒后</string>

    <string name="telephone">电话</string>
    <string name="telephone_hint">请输入电话号码</string>
    <string name="verification">验证码</string>
    <string name="verification_hint">请输入验证码</string>
    <string name="verification_get">获取验证码</string>
    <string name="verification_remind">验证码即将发送至您的手机</string>

</resources>
