<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_per"
        android:clickable="true"
        android:background="@color/whiteBackground">
        <ImageView
            android:id="@+id/iv1"
            android:layout_width="@dimen/icon_size"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:foregroundGravity="center"
            android:src="@drawable/telephone"/>
        <TextView
            android:visibility="visible"
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toRightOf="@+id/iv1"
            android:layout_marginLeft="@dimen/item_icon_padding"
            android:text="@string/telephone"
            style="@style/TextLeftStyle"/>

        <EditText
            android:id="@+id/edit_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/item_hint_padding"
            android:background="@null"
            style="@style/HintTextStyle"
            android:inputType="phone"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:hint="@string/telephone_hint"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grayLineDarker"/>

    <RelativeLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_per"
        android:clickable="true"
        android:background="@color/whiteBackground">
        <ImageView
            android:id="@+id/iv2"
            android:layout_width="@dimen/icon_size"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:foregroundGravity="center"
            android:src="@drawable/verification_code"/>
        <TextView
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toRightOf="@+id/iv2"
            android:layout_marginLeft="@dimen/item_icon_padding"
            android:text="@string/verification"
            style="@style/TextLeftStyle"/>

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:layout_marginLeft="@dimen/item_hint_padding"
            style="@style/HintTextStyle"
            android:layout_centerVertical="true"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/verification_hint"
            />
        <com.duan.android.androiddialogdemo.widget.CountDownTextView
            android:id="@+id/tv_send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/verification_get"
            style="@style/HintTextStyle"
            android:background="@drawable/oval_black_bg" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grayLineDarker"/>

</LinearLayout>